# NoGraphicsAPI

./: .gitignore  CMakeLists.txt  CMakePresets.json  Common.h  Config.cpp  Config.h  LICENSE  Main.cpp  NoGraphicsAPI.cpp  NoGraphicsAPI.h  NoGraphicsAPI_Impl.cpp  NoGraphicsAPI_Impl.h  README.md  SDL_gpu.cpp  SDL_gpu.h  Utilities.cpp  Utilities.h  format.sh  test.sh
.github/workflows/: ci.yml
Samples/Common/: TAA.h  TAA.slang  Text.h  TextPixel.slang  TextVertex.slang  Utilities.cpp  Utilities.h
Samples/Compute/: Compute.cpp  Compute.h  Compute.slang
Samples/Graphics/: Graphics.cpp  Graphics.h  Pixel.slang  TAA.slang  Vertex.slang
Samples/Learning/: Common.h  Learning.cpp  Tensor.cpp  Tensor.h  Tensor.slang
Samples/MultipleGPUs/: MultipleGPUs.cpp  MultipleGPUs.h
Samples/Raytracing/: Raytracing.cpp  Raytracing.h  Raytracing.slang  ReSTIR.slang
Shaders/: Blur.h  Blur.slang  Common.h  Compute.h  Compute.slang  Cube.h  NoGraphicsAPI.h  PatchDescriptors.h  PatchDescriptors.slang  Pixel.slang  Vertex.slang
assets/fonts/Inter/: Inter-msdf.json
ci/: Dockerfile
docs/: multithreading.md
nga/: CMakeLists.txt  README.md
nga/cmake/: CompileShaders.cmake
nga/include/: NoGraphicsAPI_Impl.h
nga/src/: NoGraphicsAPI_Impl.cpp
ngapi/cmake/: CompileShaders.cmake
ngapi/include/: NoGraphicsAPI_Impl.h  Sampler.h
ngapi/src/: NoGraphicsAPI_Impl.cpp
platform/: window.h  window_glfw.cpp  window_sdl3.cpp
samples/common/: MsdfDemo.h  MsdfFont.cpp  MsdfFont.h  MsdfPixel.slang  MsdfShared.h  MsdfVertex.slang  TAA.slang  TextPixel.slang  TextVertex.slang  Utilities.cpp  Utilities.h
samples/compute/: Compute.cpp  Compute.h  Compute.slang
samples/graphics/: Graphics.cpp  Pixel.slang
samples/learning/: Common.h  Learning.cpp  Learning.h  Tensor.cpp  Tensor.h  Tensor.slang
samples/msdf/: MsdfSample.cpp
samples/multiplegpus/: MultipleGPUs.cpp
samples/raytracing/: Raytracing.cpp  Raytracing.h  Raytracing.slang  ReSTIR.slang
samples/samplerbench/: SamplerBench.cpp
shaders/: PatchDescriptors.h
src/: NoGraphicsAPI_Impl.cpp
tests/: CMakeLists.txt  ci-run.sh  test_common.cpp  test_common.h  test_compute.cpp  test_graphics.cpp  test_msdf.cpp  test_raytracing.cpp
